---
title: edu.nust.game.systems
config:
  look: classic
  layout: elk
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
  class Score
  class PlayerSession
namespace edu.nust.game.systems.assets {
  class Asset
  class AssetManager
  class EnemyAsset <<enumeration>>
  class CharacterAsset <<enumeration>>
  class AssetEnum <<interface>>
  class TilesetAsset <<enumeration>>
  class AssetType <<enumeration>>
  class WeaponAsset <<enumeration>>
}
namespace edu.nust.game.systems.audio {
  class Audios
  class MusicManager
}
namespace edu.nust.game.systems.collision {
  class Damaging <<interface>>
  class CollisionManager
  class Damageable <<interface>>
  class ConcreteWall
  class Concrete <<interface>>
  class HitBox
}
namespace edu.nust.game.systems.pathfinder {
  class PathFinder
  class MapNodeSetter
  class Node
}
Asset --> AssetType : uses
AssetEnum --> AssetType : uses
AssetManager ..> AssetEnum : uses
AssetManager --> AssetType : uses
AssetManager --> CharacterAsset : uses
AssetManager --> EnemyAsset : uses
AssetManager --> TilesetAsset : uses
CollisionManager ..> Concrete : uses
Concrete --> HitBox : uses
ConcreteWall ..|> Concrete : implements
ConcreteWall --> HitBox : uses
Damageable --> HitBox : uses
Damaging --> HitBox : uses
MapNodeSetter --> Node : uses
PathFinder --> MapNodeSetter : uses
PathFinder --> Node : uses